--- a/frontend-portfolio/src/profile.css
+++ b/frontend-portfolio/src/profile.css
@@ -138,7 +138,7 @@ ul#hpbooks li span {
   }
 
   .grid-container-profile {
-    margin-top: 25px;
+    margin-top: 45px;
     margin-bottom: 25px;
     display: grid;
     gap: 0.8em;
