--- a/frontend-portfolio/src/styles.css
+++ b/frontend-portfolio/src/styles.css
@@ -93,6 +93,10 @@ h4 {
   color: rgb(44, 43, 43);
 }
 
+#home {
+  position: relative;
+}
+
 .hero-image {
   background-position: center;
   background-repeat: no-repeat;
@@ -101,7 +105,7 @@ h4 {
 }
 
 .hero-text {
-  position: relative;
+  position: absolute;
   left: 1%;
   color: rgb(44, 43, 43);
   font-size: 7vw;
@@ -112,8 +116,8 @@ h4 {
 }
 
 .caption {
-  position: relative;
-  bottom: 0px;
+  position: absolute;
+  bottom: 5px;
   left: 0;
   color: rgb(44, 43, 43);
   background: none;
@@ -123,7 +127,7 @@ h4 {
 
 #home img {
   width: 100vw;
-  margin-top: 5px;
+  margin-top: 35px;
 }
 
 .reveal {
@@ -194,8 +198,13 @@ h4 {
     color: rgb(44, 43, 43);
   }
 
+  #home img {
+    width: 100vw;
+    margin-top: 55px;
+  }
+
   .caption {
-    left: 20px;
+    left: 10px;
   }
 
   .parallax {
